manager/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manager
  labels:
    istio-injection: enabled
