manager/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager
  namespace: manager
  labels:
    app: manager
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: manager
